--- a/Atividade_Git.html
+++ b/Atividade_Git.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>Prática Integradora APPs</title>
+<title>Fanpage de Gatinhos</title>
 
 <meta charset=“utf-8”>
 
@@ -12,7 +12,9 @@
 
 <body>
 
-<h1>Atividade 1</h1>
+<h1>Perfil #catsoninstagram</h1>
+
+<img src=“C:\Users\nayad\OneDrive\Imagens\eduarda” />
 
 </body>
 
