--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1>Perfil #catsoninstagram</h1>
 
-<img src=“C:\Users\nayad\OneDrive\Imagens\eduarda” />
+<img src=“images/eduarda.png” />
 
 </body>
 
